--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 </head>
     <link rel="stylesheet" href="Text_Draw.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=BBH+Sans+Bartle&family=Bungee&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Jersey+10&family=Jersey+20+Charted&family=Rubik+80s+Fade&display=swap" rel="stylesheet">
+
+
+    
 <body style="background-color: beige;">    
     <style>
         @font-face {
@@ -23,3 +29,4 @@
 
 </body>
 </html>
+
