--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Machine Making & AI</title>
 
 </head>
-    <!-- <link rel="stylesheet" href="Text_Draw.css"> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=BBH+Sans+Bartle&family=Bungee&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Jersey+10&family=Jersey+20+Charted&family=Rubik+80s+Fade&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Text_Draw.css">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=BBH+Sans+Bartle&family=Bungee&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Jersey+10&family=Jersey+20+Charted&family=Rubik+80s+Fade&display=swap" rel="stylesheet"> -->
 
 
     
@@ -29,5 +29,6 @@
 
 </body>
 </html>
+
 
 
