--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
   <script>
     function getRandomImage() {
       var randomImage = [
-        '/KYT1.png',
-        '/KYT2.png',
-        '/KYT13.png',
-        '/KYT11.png',
-        '/KYT10.png',
-        '/KYT9.png',
-        '/KYT3.png',
-        '/KYT4.png',
-        '/KYT5.png',
-        '/KYT6.png',
+        'KYT1.png',
+        'KYT2.png',
+        'KYT13.png',
+        'KYT11.png',
+        'KYT10.png',
+        'KYT9.png',
+        'KYT3.png',
+        'KYT4.png',
+        'KYT5.png',
+        'KYT6.png',
       ];
       
       // รายชื่อคนที่จะพูด KYT
