--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="image-wrapper">
           <button class="close-btn" onclick="hideImage()">✖</button>
           <p class="speaker-text">${speaker}</p>
-          <img src="${randomImage[number]}" alt="Random KYT Image"/>
+          <img src="${randomImage[number]}" alt="Random KYT Image" sytle="display:block; margin:0 auto;"/>
         </div>
       `;
       document.getElementById('result').innerHTML = html;
