--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     }
 
     .container {
-      height: 100vh;
       position: fixed;
-      top: 100px;
-      left: 700px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     .image-wrapper {
