--- a/KYT.html
+++ b/KYT.html
@@ -96,16 +96,16 @@
   <script>
     function getRandomImage() {
       var randomImage = [
-        '/public/KYT1.png',
-        '/public/KYT2.png',
-        '/public/KYT13.png',
-        '/public/KYT11.png',
-        '/public/KYT10.png',
-        '/public/KYT9.png',
-        '/public/KYT3.png',
-        '/public/KYT4.png',
-        '/public/KYT5.png',
-        '/public/KYT6.png',
+        'KYT1.png',
+        'KYT2.png',
+        'KYT13.png',
+        'KYT11.png',
+        'KYT10.png',
+        'KYT9.png',
+        'KYT3.png',
+        'KYT4.png',
+        'KYT5.png',
+        'KYT6.png',
       ];
       
       // รายชื่อคนที่จะพูด KYT
@@ -136,5 +136,6 @@
     }
   </script>
 </body>
+
 
 </html>
