--- a/KYT.html
+++ b/KYT.html
@@ -96,16 +96,16 @@
   <script>
     function getRandomImage() {
       var randomImage = [
-        '/KYT1.png',
-        '/KYT2.png',
-        '/KYT13.png',
-        '/KYT11.png',
-        '/KYT10.png',
-        '/KYT9.png',
-        '/KYT3.png',
-        '/KYT4.png',
-        '/KYT5.png',
-        '/KYT6.png',
+        'KYT1.png',
+        'KYT2.png',
+        'KYT13.png',
+        'KYT11.png',
+        'KYT10.png',
+        'KYT9.png',
+        'KYT3.png',
+        'KYT4.png',
+        'KYT5.png',
+        'KYT6.png',
       ];
       
       // รายชื่อคนที่จะพูด KYT
@@ -139,4 +139,5 @@
 
 
 </html>
+
 
